Use new string format method